--- a/src/index.css
+++ b/src/index.css
@@ -9,7 +9,7 @@
 body {
   font-family: "Nunito Sans", sans-serif !important;
   line-height: 1.6;
-  color: #333;
+  color: var(--text-primary);
 }
 
 #root {
